<resources>
    <string name="app_name">MovieDbResponseTemplate</string>

    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV show</string>
    <string name="people">People</string>
    <string name="settings">Settings</string>

    <string name="popular_movies">Popular Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="nowplaying_movies">Now Playing Movies</string>
    <string name="toprated_movies">TopRated Movies</string>

    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="nowplaying">Now Playing</string>
    <string name="toprated">Top Rated</string>
    <string name="on_air">On Air</string>
    <string name="airing_today">Airing Today</string>
    <string name="try_again_text_btn">Try again</string>
    <string name="internal_error">An internal error occurred. please try again later</string>
    <string name="label_no_internet">The connection appears a little…shoddy a the moment.</string>

    <string name="error_text_label">Wops something happened</string>

</resources>