<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/moviesFragment"
            android:icon="@drawable/ic_gallery_black_24dp"
            android:title="@string/movies" />
        <item
            android:id="@+id/tvShowsFragment"
            android:icon="@drawable/ic_slideshow_black_24dp"
            android:title="@string/tv_shows" />
        <item
            android:id="@+id/peopleFragment"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/people" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_camera_black_24dp"
            android:title="@string/settings" />
    </group>
</menu>